package comandos;

public interface Comandos {
    void executar();
} 
