package usuarios;

public class Administrador extends Usuarios{

    public Administrador(String nome, String login, String senha) {
        super("ADMINISTRADOR", nome, login, senha);
    }
    
}
