package usuarios;

public class Gerente extends Usuarios {

    public Gerente(String nome, String login, String senha) {
        super("GERENTE", nome, login, senha);
    }
    
}
